Use .formatted in MicronautRewriteTestVersions.
Co-authored-by: Tim te Beek <timtebeek@gmail.com>